; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/kvm/lib/extr_kvm_util.c_vcpu_nested_state_get.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/kvm/lib/extr_kvm_util.c_vcpu_nested_state_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vm = type { i32 }
%struct.kvm_nested_state = type { i32 }
%struct.vcpu = type { i32 }

@.str = private unnamed_addr constant [27 x i8] c"vcpu not found, vcpuid: %u\00", align 1
@KVM_GET_NESTED_STATE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [47 x i8] c"KVM_SET_NESTED_STATE failed, ret: %i errno: %i\00", align 1
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @vcpu_nested_state_get(%struct.kvm_vm* %0, i32 %1, %struct.kvm_nested_state* %2) #0 {
  %4 = alloca %struct.kvm_vm*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.kvm_nested_state*, align 8
  %7 = alloca %struct.vcpu*, align 8
  %8 = alloca i32, align 4
  store %struct.kvm_vm* %0, %struct.kvm_vm** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.kvm_nested_state* %2, %struct.kvm_nested_state** %6, align 8
  %9 = load %struct.kvm_vm*, %struct.kvm_vm** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call %struct.vcpu* @vcpu_find(%struct.kvm_vm* %9, i32 %10)
  store %struct.vcpu* %11, %struct.vcpu** %7, align 8
  %12 = load %struct.vcpu*, %struct.vcpu** %7, align 8
  %13 = icmp ne %struct.vcpu* %12, null
  %14 = zext i1 %13 to i32
  %15 = load i32, i32* %5, align 4
  %16 = call i32 (i32, i8*, i32, ...) @TEST_ASSERT(i32 %14, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %15)
  %17 = load %struct.vcpu*, %struct.vcpu** %7, align 8
  %18 = getelementptr inbounds %struct.vcpu, %struct.vcpu* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @KVM_GET_NESTED_STATE, align 4
  %21 = load %struct.kvm_nested_state*, %struct.kvm_nested_state** %6, align 8
  %22 = call i32 @ioctl(i32 %19, i32 %20, %struct.kvm_nested_state* %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %8, align 4
  %24 = icmp eq i32 %23, 0
  %25 = zext i1 %24 to i32
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* @errno, align 4
  %28 = call i32 (i32, i8*, i32, ...) @TEST_ASSERT(i32 %25, i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str.1, i64 0, i64 0), i32 %26, i32 %27)
  ret void
}

declare dso_local %struct.vcpu* @vcpu_find(%struct.kvm_vm*, i32) #1

declare dso_local i32 @TEST_ASSERT(i32, i8*, i32, ...) #1

declare dso_local i32 @ioctl(i32, i32, %struct.kvm_nested_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
